Add DELUGE_LOGLEVEL env var

--- a/ansible/install_applications/roles/download_deluge_deploy/app/deploy/daemon-statefulset.yaml.j2
+++ b/ansible/install_applications/roles/download_deluge_deploy/app/deploy/daemon-statefulset.yaml.j2
@@ -41,6 +41,8 @@ spec:
         - containerPort: 58846
           name: daemon
         env:
+        - name: "DELUGE_LOGLEVEL"
+          value: "info"
         - name: "DELUGE_CONF_CORE_TORRENTFILES_LOCATION"
           value: "/mnt/download/torrent/torrent-files"
         - name: "DELUGE_CONF_CORE_DOWNLOAD_LOCATION"
