--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -759,11 +759,11 @@ watchers:
     image: {{ ttrss_pgsql.base_image.name }}
     tag: {{ ttrss_pgsql.base_image.tag }}
     includes:
-      - ^12\.[0-9]+(\.[0-9]+)?-alpine
+      - ^[0-9]+\.[0-9]+-alpine.*
     excludes:
+      - .*-alpine3\.1[0-4]
       - ^[0-9]\..*
-      - ^1[0-1]\..*
-      - ^12\.[0-8]-.*
+      - ^1[0-3]\..*
 
   ################
   # Apps : Tools #
