--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -648,9 +648,8 @@ watchers:
     image: {{ airsonic.base_image.name }}
     tag: {{ airsonic.base_image.tag }}
     includes:
-      - .*-RELEASE
-    excludes:
-      - 10\.[0-5]\.
+      - .*-SNAPSHOT.*
+
   - type: docker_registry
     repo: {{ jellyfin.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
     image: {{ jellyfin.base_image.name }}
