--- a/ansible/install_applications/roles/dev_gitea_deploy/app/deploy/gitea-secret.yaml.j2
+++ b/ansible/install_applications/roles/dev_gitea_deploy/app/deploy/gitea-secret.yaml.j2
@@ -10,3 +10,4 @@ type: Opaque
 data:
   admin_password: {{ gitea.admin.password | b64encode }}
   smtp_password: {{ gitea.smtp.password | b64encode }}
+  ldap_bind_password: {{ gitea.ldap.bind_password | b64encode }}
