--- a/ansible/install_applications/roles/dev_gitea_deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/dev_gitea_deploy/app/deploy/networkPolicies.yaml.j2
@@ -50,3 +50,10 @@ spec:
           podSelector:
             matchLabels:
               {{ ingress_nginx.labels_def | to_nice_yaml() | indent(14) }}
+        # Allow from prometheus
+        - namespaceSelector:
+            matchLabels:
+              name: {{ prometheus.namespace }}
+          podSelector:
+            matchLabels:
+              {{ prometheus.labels_def | to_nice_yaml() | indent(14) }}
