--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -112,6 +112,27 @@ watchers:
       - ^[1-9]\.
       - ^1[0-3]\.
       - ^14\.[0-6]\.
+  - type: docker_registry
+    repo: {{ gitea.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
+    image: {{ gitea.base_image.name }}
+    tag: {{ gitea.base_image.tag }}
+    includes:
+      - ^[0-9]+\.[0-9]+\.[0-9]+-rootless
+    excludes:
+      - ^0\..*
+      - ^1\.[0-9]\..*
+      - ^1\.1[0-5]\..*
+  - name: Gitea PostgreSQL
+    type: docker_registry
+    repo: {{ gitea_pgsql.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
+    image: {{ gitea_pgsql.base_image.name }}
+    tag: {{ gitea_pgsql.base_image.tag }}
+    includes:
+      - ^[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
+    excludes:
+      - .*-alpine3\.1[0-4]
+      - ^[0-9]\..*
+      - ^1[0-3]\..*
   
   ###################
   # Apps : Download #
@@ -758,7 +779,7 @@ watchers:
     image: {{ ttrss_pgsql.base_image.name }}
     tag: {{ ttrss_pgsql.base_image.tag }}
     includes:
-      - ^[0-9]+\.[0-9]+-alpine.*
+      - ^[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
     excludes:
       - .*-alpine3\.1[0-4]
       - ^[0-9]\..*
