--- a/ansible/install_infra/roles/kubernetes_master_bootstrap/templates/kubeadm_config.yaml.j2
+++ b/ansible/install_infra/roles/kubernetes_master_bootstrap/templates/kubeadm_config.yaml.j2
@@ -1,6 +1,9 @@
 apiVersion: kubeadm.k8s.io/v1beta2
 kind: ClusterConfiguration
 clusterName: {{ kubernetes_cluster_name }}
+{% if kubernetes_control_plane_version_override is defined %}
+kubernetesVersion: {{ kubernetes_control_plane_version_override }}
+{% endif %}
 controlPlaneEndpoint: {{ kubernetes_apiserver_bind_ip }}:{{ haproxy_kubernetes_apiserver_port }}
 networking:
   podSubnet: {{ kubernetes_pod_network_cidr }}
