Flag glusterfs storage class as non expandable

--- a/ansible/install_infra/roles/kubernetes_storage_classes/templates/kubernetes/storage/glusterfs-storage-class.yaml.j2
+++ b/ansible/install_infra/roles/kubernetes_storage_classes/templates/kubernetes/storage/glusterfs-storage-class.yaml.j2
@@ -4,3 +4,5 @@ metadata:
   name: {{ kubernetes_glusterfs_storage_class_name }}
 provisioner: kubernetes.io/no-provisioner
 volumeBindingMode: WaitForFirstConsumer
+# Avoid spamming kubelet logs : MarkFSResizeRequired failed to find expandable plugin for volume
+allowVolumeExpansion: false
