--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -728,7 +728,7 @@ watchers:
       - '8\.0\.1[0-4]-apache-buster'
   - name: TT-RSS
     type: raw_html
-    page_url: https://git.tt-rss.org/fox/tt-rss/commits/master
+    page_url: https://git-gitea.tt-rss.org/fox/tt-rss/commits/master
     id: {{ ttrss.commit }}
     container_selector: "#commits-table"
     item_selector: "tbody tr"
