--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -658,6 +658,9 @@ watchers:
     tag: {{ airsonic.base_image.tag }}
     includes:
       - .*-SNAPSHOT.*
+    excludes:
+      - .*-SNAPSHOT.202[0-1].*
+      - .*-SNAPSHOT.20220[1-2].*
 
   - type: docker_registry
     repo: {{ jellyfin.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
