--- a/ansible/install_infra/roles/kubernetes_nginx_ingress_deploy/templates/mandatory.yaml.j2
+++ b/ansible/install_infra/roles/kubernetes_nginx_ingress_deploy/templates/mandatory.yaml.j2
@@ -289,6 +289,7 @@ metadata:
   name: ingress-nginx-controller
   namespace: ingress-nginx
 spec:
+  replicas: {{ kubernetes_nginx_ingress_controller_replicas }}
   selector:
     matchLabels:
       app.kubernetes.io/name: ingress-nginx
