Use replicas for the docker registry

--- a/ansible/install_applications/roles/infra_docker_registry_deploy/app/config/config.yml.j2
+++ b/ansible/install_applications/roles/infra_docker_registry_deploy/app/config/config.yml.j2
@@ -22,6 +22,7 @@ health:
     threshold: 3
 http:
   addr: :5443
+  secret: {{ docker_registry.http_secret }}
 
   tls:
     certificate: /certs/server.crt
