--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -57,9 +57,12 @@ watchers:
     excludes:
       - v3\.1[0-9]\..*
       - v3\.2[0-1]\..*
-  - type: github_release
-    repo: intel/multus-cni
-    release: v3.8.1
+  - type: docker_registry
+    repo: ghcr.io
+    image: k8snetworkplumbingwg/multus-cni
+    tag: v3.8.1
+    includes:
+      - "^v[0-9]+\\.[0-9]+\\.[0-9]$"
     excludes:
       - v[0-2]\..*
       - v3\.[0-7](\..*)?
