--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -426,7 +426,7 @@ watchers:
     includes:
       - "[6-9]\\.[0-9]+\\.[0-9]+.*alpine[0-9]+\\.[0-9][0-9]"
     excludes:
-      - .*alpine3\.1[0-3]
+      - .*alpine3\.1[0-4]
       - ^6\.[0-1]\.
   - name: "ZoneMTA Mongo"
     type: docker_registry
@@ -446,13 +446,11 @@ watchers:
     image: {{ zonemta.base_image.name }}
     tag: {{ zonemta.base_image.tag }}
     includes:
-      - 12\.[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9][0-9]
+      - [0-9]+\.[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9][0-9]
     excludes:
-      - .*-alpine3.1[0-3]
-      - 12\.[0-9]\..*
-      - 12\.1[0-9]\..*
-      - 12\.2[0-1]\..*
-      - 12\.22\.[0-6]-.*
+      - .*-alpine3.1[0-4]
+      - 1[0-6]\.[0-9]\..*
+      - 17\.[0-6]\..*
   - type: docker_registry
     repo: {{ intel_gpu_plugin.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
     image: {{ intel_gpu_plugin.base_image.name }}
