Rename dns VIP variable

--- a/ansible/install_applications/roles/infra_pihole_deploy/app/deploy/service-dns.yaml.j2
+++ b/ansible/install_applications/roles/infra_pihole_deploy/app/deploy/service-dns.yaml.j2
@@ -10,7 +10,7 @@ metadata:
     metallb.universe.tf/allow-shared-ip: pihole
 spec:
   type: LoadBalancer
-  loadBalancerIP: {{ kubernetes_pihole_lb_ip }}
+  loadBalancerIP: {{ kubernetes_dns_lb_ip }}
   externalTrafficPolicy: Local
   ports:
     - name: dns-udp
@@ -34,7 +34,7 @@ metadata:
     metallb.universe.tf/allow-shared-ip: pihole
 spec:
   type: LoadBalancer
-  loadBalancerIP: {{ kubernetes_pihole_lb_ip }}
+  loadBalancerIP: {{ kubernetes_dns_lb_ip }}
   externalTrafficPolicy: Local
   ports:
     - name: dns
