--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -348,6 +348,17 @@ watchers:
     excludes:
       - v0\.[0-9]$
       - v0\.1[0-7]$
+  - name: Blocky PostgreSQL
+    type: docker_registry
+    repo: {{ blocky_pgsql.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
+    image: {{ blocky_pgsql.base_image.name }}
+    tag: {{ blocky_pgsql.base_image.tag }}
+    includes:
+      - ^[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
+    excludes:
+      - .*-alpine3\.1[0-4]
+      - ^[0-9]\..*
+      - ^1[0-3]\..*
   - type: docker_registry
     repo: {{ gotify.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
     image: {{ gotify.base_image.name }}
