Configure blocky query log to pgsql

--- a/ansible/install_applications/roles/infra_blocky_deploy/app/deploy/blocky-deployment.yaml.j2
+++ b/ansible/install_applications/roles/infra_blocky_deploy/app/deploy/blocky-deployment.yaml.j2
@@ -64,8 +64,8 @@ spec:
         hostPath:
           path: /etc/localtime
       - name: blocky-config
-        configMap:
-          name: blocky-config
+        secret:
+          secretName: blocky-config
       imagePullSecrets:
       - name: docker-config
       nodeSelector:
