--- a/ansible/install_applications/roles/infra_blocky_deploy/app/deploy/blocky-secret.yaml.j2
+++ b/ansible/install_applications/roles/infra_blocky_deploy/app/deploy/blocky-secret.yaml.j2
@@ -1,11 +1,11 @@
 apiVersion: v1
-kind: ConfigMap
+kind: Secret
 metadata:
   name: blocky-config
-  namespace: {{ blocky.namespace }}
+  namespace: "{{ blocky.namespace }}"
   labels:
     {{ blocky.labels_def | to_nice_yaml() | indent(4) }}
     {{ blocky.labels_desc | to_nice_yaml() | indent(4) }}
 data:
   config.yml: |
-    {{ lookup('template', role_path + '/app/config/config.yml.j2')  | replace('\n', '\n    ') }}
+    {{ lookup('template', role_path + '/app/config/config.yml.j2')  | b64encode }}
