--- a/ansible/install_applications/roles/infra_blocky_deploy/app/config/config.yml.j2
+++ b/ansible/install_applications/roles/infra_blocky_deploy/app/config/config.yml.j2
@@ -106,18 +106,17 @@ prometheus:
   path: /metrics
 
 # optional: write query information (question, answer, client, duration etc.) to daily csv file
-#queryLog:
-#  # optional one of: mysql, postgresql, csv, csv-client. If empty, log to console
-#  type: mysql
-#  # directory (should be mounted as volume in docker) for csv, db connection string for mysql/postgresql
-#  target: db_user:db_password@tcp(db_host_or_ip:3306)/db_name?charset=utf8mb4&parseTime=True&loc=Local
-#  #postgresql target: postgres://user:password@db_host_or_ip:5432/db_name
-#  # if > 0, deletes log files which are older than ... days
-#  logRetentionDays: 7
-#  # optional: Max attempts to create specific query log writer, default: 3
-#  creationAttempts: 1
-#  # optional: Time between the creation attempts, default: 2s
-#  creationCooldown: 2s
+queryLog:
+  # optional one of: mysql, postgresql, csv, csv-client. If empty, log to console
+  type: postgresql
+  # directory (should be mounted as volume in docker) for csv, db connection string for mysql/postgresql
+  target: postgres://{{ blocky_pgsql.user }}:{{ blocky_pgsql.password }}@pgsql:5432/{{ blocky_pgsql.database }}
+  # if > 0, deletes log files which are older than ... days
+  logRetentionDays: 7
+  # optional: Max attempts to create specific query log writer, default: 3
+  creationAttempts: 5
+  # optional: Time between the creation attempts, default: 2s
+  creationCooldown: 2s
 
 
 # optional: DNS listener port(s) and bind ip address(es), default 53 (UDP and TCP). Example: 53, :53, "127.0.0.1:5353,[::1]:5353"
