Support multiple datasources in Grafana

--- a/ansible/install_applications/roles/monitoring_grafana_deploy/app/deploy/datasources-secret.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_grafana_deploy/app/deploy/datasources-secret.yaml.j2
@@ -8,4 +8,6 @@ metadata:
     {{ grafana.labels_desc | to_nice_yaml() | indent(4) }}
 type: Opaque
 data:
-  prometheus.yaml: {{ lookup('template', role_path + '/app/config/datasources/prometheus.yaml.j2') | b64encode }}
+{% for grafana_datasources_file in grafana_datasources_files %}
+  {{ grafana_datasources_file | basename | replace(".j2", "") }}: {{ lookup('template', grafana_datasources_file) | b64encode }}
+{% endfor %}
