--- a/ansible/install_applications/roles/infra_blocky_deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/infra_blocky_deploy/app/deploy/networkPolicies.yaml.j2
@@ -55,3 +55,10 @@ spec:
         - podSelector:
             matchLabels:
               {{ blocky.labels_def | to_nice_yaml() | indent(14) }}
+        # Allow from grafana
+        - namespaceSelector:
+            matchLabels:
+              name: {{ grafana.namespace }}
+          podSelector:
+            matchLabels:
+              {{ grafana.labels_def | to_nice_yaml() | indent(14) }}
